@@ -1,3 +1,12 @@
+2011-09-13  Armando Basile  <hmandevteam@gmail.com>
+
+	* comex-gtk.csproj:
+	* Properties/AssemblyInfo.cs:
+	* Src/Gui_Classes/AboutDialogClass.cs:
+	* Src/Gui_Classes/SettingsDialogClass.cs:
+	* Src/Gui_Classes/MainWindowClass.Designer.cs: - glade widgets
+	init to null value (removed warning on build on windows)
+
 2011-09-12  Armando Basile  <hmandevteam@gmail.com>
 
 	* readme:
